Minor bug fixed, text wrap property added to message boxes

--- a/CSS/form styles.css
+++ b/CSS/form styles.css
@@ -120,6 +120,7 @@ main
 {
 	border-style: dashed;
 	height: fit-content;
+	text-wrap: wrap;
 }
 
 /* for error message */
